Temporary z-index fix.

--- a/modules/gui/frontend/src/widget/floatingBox.module.css
+++ b/modules/gui/frontend/src/widget/floatingBox.module.css
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 3;
+    z-index: 9999;
 }
 
 .box {
@@ -14,7 +14,7 @@
     left: calc(var(--left) * 1px);
     right: calc(var(--right) * 1px);
     width: calc(var(--width) * 1px);
-    /* z-index: 9999999; */
+    z-index: 9999;
 }
 
 .box.above {
